--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ num_cpus = "1.16.0"
 config = "0.15.11"
 hex = "0.4.3"
 async-trait = "0.1.81"
-redbit = { git = "https://github.com/pragmaxim-com/redbit" }
-redb = "2.6.0"
+redbit = { git = "https://github.com/pragmaxim-com/redbit", tag = "v1.0.1" }
+redb = "2.6.2"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.45.1", features = ["full"] }
